# spotme

./: .gitignore  AUDIT.md  Cargo.toml  antigravity-audit.md  antigravity-enterprise-audit.md  claude-audit.md  debug_ghostty  debug_ghostty.rs  design.md  features.md  parse_debug  parse_debug.rs  test_picker  test_picker.rs  test_variants  test_variants.rs  xylem-dev-env.md
.cargo/: audit.toml
.github/workflows/: ci.yml
src/: bin_test.rs  config.rs  main.rs  test_librespot.rs
src/api/: endpoints.rs  mod.rs  models.rs
src/app/: events.rs  mod.rs  state.rs  ui.rs
