[package]
name = "spotme"
version = "0.1.0"
edition = "2021"
default-run = "spotme"

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.30.0"
crossterm = "0.28.1"
dotenvy = "0.15.7"
anyhow = "1.0"
futures = "0.3.32"
reqwest = { version = "0.13.2", features = ["json", "form"] }
serde_json = "1.0.149"
librespot-core = { git = "https://github.com/librespot-org/librespot", version = "0.8.0" }
librespot-playback = { git = "https://github.com/librespot-org/librespot", version = "0.8.0" }
librespot-connect = { git = "https://github.com/librespot-org/librespot", version = "0.8.0" }
ratatui-image = { version = "10.0.6", default-features = false, features = ["crossterm"] }
image = { version = "0.25.10", features = ["jpeg", "png"] }
serde = { version = "1.0.228", features = ["derive"] }
urlencoding = "2.1.3"
open = "5.3.3"
directories = "6.0.0"
rand = "0.10.0"
base64 = "0.22.1"
sha2 = "0.11.0"

[[bin]]
name = "spotme"
path = "src/main.rs"

[dev-dependencies]
mockito = "1.7.2"





